// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders Avatars correctly when set src, icon and string 1`] = `
<div>
  <span
    class="zw-avatar zw-avatar--sm zw-avatar--circle"
  >
    <img
      alt="my avatar"
      class="zw-avatar--image"
      src="site/images/avatar/avatar.png"
    />
  </span>
</div>
`;

exports[`Avatar renders Avatars of different shape correctly 1`] = `
<div>
  <Avatar
    alt=""
    prefixCls="zw-avatar"
    shape="circle"
    size="md"
    src=""
  />
  <Avatar
    alt=""
    prefixCls="zw-avatar"
    shape="circle"
    size="md"
    src=""
  />
  <Avatar
    alt=""
    prefixCls="zw-avatar"
    shape="square"
    size="md"
    src=""
  />
</div>
`;

exports[`Avatar renders Avatars of different size correctly 1`] = `
<div>
  <span
    class="zw-avatar zw-avatar--xl zw-avatar--circle"
  >
    <span
      class="zw-avatar--string"
      style="transform:scale(1) translateX(-50%);-webkit-transform:scale(1) translateX(-50%);-ms-transform:scale(1) translateX(-50%)"
    >
      XL
    </span>
  </span>
  <span
    class="zw-avatar zw-avatar--lg zw-avatar--circle"
  >
    <span
      class="zw-avatar--string"
      style="transform:scale(1) translateX(-50%);-webkit-transform:scale(1) translateX(-50%);-ms-transform:scale(1) translateX(-50%)"
    >
      LG
    </span>
  </span>
  <span
    class="zw-avatar zw-avatar--md zw-avatar--circle"
  >
    <span
      class="zw-avatar--string"
      style="transform:scale(1) translateX(-50%);-webkit-transform:scale(1) translateX(-50%);-ms-transform:scale(1) translateX(-50%)"
    >
      MD
    </span>
  </span>
  <span
    class="zw-avatar zw-avatar--sm zw-avatar--circle"
  >
    <span
      class="zw-avatar--string"
      style="transform:scale(1) translateX(-50%);-webkit-transform:scale(1) translateX(-50%);-ms-transform:scale(1) translateX(-50%)"
    >
      SM
    </span>
  </span>
  <span
    class="zw-avatar zw-avatar--xs zw-avatar--circle"
  >
    <span
      class="zw-avatar--string"
      style="transform:scale(1) translateX(-50%);-webkit-transform:scale(1) translateX(-50%);-ms-transform:scale(1) translateX(-50%)"
    >
      XS
    </span>
  </span>
</div>
`;

exports[`Avatar renders Avatars of different type correctly 1`] = `
<div>
  <span
    class="zw-avatar zw-avatar--sm zw-avatar--circle"
    style="font-size:12px"
  >
    <span
      class="zw-avatar--string"
    >
      USER
    </span>
  </span>
  <span
    class="zw-avatar zw-avatar--sm zw-avatar--circle"
    style="color:red;background-color:rgb(249, 232, 8)"
  >
    <span
      class="zw-avatar--string"
      style="transform:scale(1) translateX(-50%);-webkit-transform:scale(1) translateX(-50%);-ms-transform:scale(1) translateX(-50%)"
    >
      USER
    </span>
  </span>
  <span
    class="zw-avatar zw-avatar--sm zw-avatar--circle"
  >
    <img
      alt="my avatar"
      class="zw-avatar--image"
      src="site/images/avatar/avatar.png"
    />
  </span>
</div>
`;
